fixed 0 button width

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button class="dark-buttons" data-number="3">3</button>
                 <button class="orange-buttons" data-operator="+">+</button>
 
-                <button class="dark-buttons" class="zero-button" data-number="0">0</button>
+                <button class="dark-buttons zero-button" data-number="0">0</button>
                 <button class="dark-buttons" id="dot">.</button>
                 <button class="orange-buttons" data-operator="=">=</button>
                 
