--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
 
         <div class="calculator">
                 <div class="display-screen">
+                <div class="screen-last" id="lastOperationScreen"></div>
                 <output class="display-content">0</output>
                 </div>
 
             <div class="buttons-grid">
 
                 <button class="grey-buttons" data-operator="clear">AC</button>
-                <button class="grey-buttons" data-operator="+/-">±</button>
-                <button class="grey-buttons" data-operator="remainder">%</button>
-                <button class="orange-buttons" data-operator="division">÷</button>
+                <button class="grey-buttons" data-operator="±">±</button>
+                <button class="grey-buttons" data-operator="%">%</button>
+                <button class="orange-buttons" data-operator="÷">÷</button>
 
                 <button class="dark-buttons" data-number="7">7</button>
                 <button class="dark-buttons" data-number="8">8</button>
                 <button class="dark-buttons" data-number="9">9</button>
-                <button class="orange-buttons" data-operator="x">×</button>
+                <button class="orange-buttons" data-operator="×">×</button>
 
                 <button class="dark-buttons" data-number="4">4</button>
                 <button class="dark-buttons" data-number="5">5</button>
@@ -39,12 +40,12 @@
 
                 <button class="dark-buttons zero-button" data-number="0">0</button>
                 <button class="dark-buttons" id="dot">.</button>
-                <button class="orange-buttons equal-sign" data-operator="=">=</button>
+                <button class="orange-buttons equal-sign">=</button>
                 
             </div>
          </div>
 
     </div>
-    
+<script src="app.js"></script>
 </body>
 </html>
