add .remainder-button class

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div class="buttons-grid">
 
                 <button class="grey-buttons" data-operator="clear">AC</button>
-                <button class="grey-buttons" data-operator="±">±</button>
-                <button class="grey-buttons" data-operator="%">%</button>
+                <button class="grey-buttons" id="plus-minus">±</button>
+                <button class="grey-buttons remainder-button" data-operator="%">%</button>
                 <button class="orange-buttons" data-operator="÷">÷</button>
 
                 <button class="dark-buttons" data-number="7">7</button>
